--- a/index.html
+++ b/index.html
@@ -3,138 +3,142 @@
   <head>
      <meta charset="utf-8">
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
-    <link href='font.css' rel='stylesheet' type='text/css'>
-    <link href='style.css' rel='stylesheet' type='text/css'  charset="utf-8">
+    <link href='css/font.css' rel='stylesheet' type='text/css'>
+    <link href='css/style.css' rel='stylesheet' type='text/css'  charset="utf-8">
   </head>
   <body data-spy="scroll" data-target=".navbar">
-<!--     <nav class="navbar">
-      <ul class="nav">
-        <li data-color="dark" class="active"><a href="#haya"><span class="nav-title">HAYA ODEH</span></a></li>
-        <li data-color="light"><a href="#approach"><span class="nav-title">MY APPROACH</span></a></li>
-        <li data-color="dark"><a href="#projects"><span class="nav-title">MY PROJECTS</span></a></li>
-      </ul>
-    </nav> -->
+    <div class="page-wrap">
 
-    <section class="intro" id="haya">
-    <div class="bg"
-        data-center="background-position: 50% -100px;"
+    <!-- <nav class="navbar">
+        <ul class="nav">
+          <li data-color="dark" class="active"><a href="#haya"><span class="nav-title">HAYA ODEH</span></a></li>
+          <li data-color="light"><a href="#approach"><span class="nav-title">MY APPROACH</span></a></li>
+          <li data-color="dark"><a href="#projects"><span class="nav-title">MY PROJECTS</span></a></li>
+        </ul>
+      </nav> -->
+
+      <section class="intro" id="haya">
+      <div class="bg"
+          data-center="background-position: 50% -100px;"
+          data-top-bottom="background-position: 50% -200px;"
+          data-anchor-target=".intro">
+          <div class="title">
+            <h1>HAYA ODEH</h1>
+            <h3 class="role">UI UX DESIGNER</h3>
+          </div>
+          <a href="" class="pdf cta">PDF PORTFOLIO</a>
+          <div class="scroll-arrow"></div>
+      </div>
+    </section>
+      <section class="about content cf">
+        <section class="col">
+          <img src="images/me.jpg" />
+        </section>
+        <section class="col">
+          <h3>ABOUT ME</h3>
+  <p>I’m a UI/UX Designer. Born in Abu Dhabi, raised in Jordan, I went to school to study Graphic Design &amp; Art. Through my school years I was deeply influenced by the impressionist movement in art. Thats when I started to pay attention to the crucial relation between design and the psyche, and that helped me in the way I approach my designs as a language or a way of communication.</p>
+  <p>After graduating, I spent a few years working at small design studios in Amman. Meanwhile I paired with two programmers to do a side project, it was an open source and free app for helping people teach and learn programming online. And out of no where the project was a huge hit in the world of technology, which made me thrive for more and that passion found its new home in New York.</p>
+  <p>In this new challenge I started to freelance in Graphic Design but I wanted more as I’ve always had this passion for technology. That's when I decided to take a deep dive into the world of tech and enroll in General Assembly UX Design Intensive course to study lean UX, change my career and emerge as a UI/UX designer.</p>
+  <a href="" class="resume cta">RESUME</a>
+        </section>
+      </section>
+    <section class="approach" id="approach">
+      <div class="title">
+        <h2>MY APPROACH</h2>
+      </div>
+      <div class="quote"
+          data-bottom="transform: translate3d(0, 100px, 0); opacity: 0.3;"
+          data-center="transform: translate3d(0, -44px, 0); opacity: 1;"
+          data-anchor=".approach">
+        <div class="part1">A DESIGNER IS A PLANNER</div>
+        <div class="part2">WITH AN</div>
+        <div class="part3">AESTHETIC SENSE</div>
+      </div>
+    </section>
+    <section class="steps content cf">
+      <div class="step-container cf">
+        <div class="step">
+          <div class="img-container">
+            <img
+              data-center="opacity: 1;"
+              data-bottom="opacity:0;"
+              class="colored" src="images/discovery_color.png" />
+            <img
+              data-center="opacity: 0;"
+              data-bottom="opacity:1;"
+              src="images/discovery.png" />
+          </div>
+          <h4>DISCOVERY</h4><h4>AND RESEARCH</h4>
+        </div>
+        <div class="step">
+          <div class="img-container">
+            <img
+              data-center="opacity: 1;"
+              data-bottom="opacity: 0;"
+              src="images/prototype_color.png" />
+            <img
+              data-center="opacity: 0;"
+              data-bottom="opacity:1;"
+              src="images/prototype.png" />
+          </div>
+          <h4>PROTOTYPE</h4><h4>AND TEST</h4>
+        </div>
+        <div class="step">
+          <div class="img-container">
+            <img
+              data-center="opacity: 1;"
+              data-bottom="opacity: 0;"
+              src="images/design_color.png" />
+            <img
+              data-center="opacity: 0;"
+              data-bottom="opacity:1;"
+              src="images/design.png" />
+          </div>
+          <h4>DESIGN FROM</h4><h4>THE HEART</h4>
+        </div>
+      </div>
+    </section>
+
+    <section class="projects">
+       <div class="title">
+        <h2>MY PROJECTS</h2>
+      </div>
+      <div class="bg"
+        data-center="background-position: 50% 0px;"
         data-top-bottom="background-position: 50% -200px;"
         data-anchor-target=".intro">
-        <div class="title">
-          <h1>HAYA ODEH</h1>
-          <h3 class="role">UI UX DESIGNER</h3>
-        </div>
-        <a href="" class="pdf cta">PDF PORTFOLIO</a>
-        <div class="scroll-arrow"></div>
-    </div>
-  </section>
-    <section class="about content cf">
-      <section class="col">
-        <img src="images/me.jpg" />
-      </section>
-      <section class="col">
-        <h3>ABOUT ME</h3>
-<p>I’m a UI/UX Designer. Born in Abu Dhabi, raised in Jordan, I went to school to study Graphic Design &amp; Art. Through my school years I was deeply influenced by the impressionist movement in art. Thats when I started to pay attention to the crucial relation between design and the psyche, and that helped me in the way I approach my designs as a language or a way of communication.</p>
-<p>After graduating, I spent a few years working at small design studios in Amman. Meanwhile I paired with two programmers to do a side project, it was an open source and free app for helping people teach and learn programming online. And out of no where the project was a huge hit in the world of technology, which made me thrive for more and that passion found its new home in New York.</p>
-<p>In this new challenge I started to freelance in Graphic Design but I wanted more as I’ve always had this passion for technology. That's when I decided to take a deep dive into the world of tech and enroll in General Assembly UX Design Intensive course to study lean UX, change my career and emerge as a UI/UX designer.</p>
-<a href="" class="resume cta">RESUME</a>
-      </section>
+      </div>
     </section>
-  <section class="approach" id="approach">
-    <div class="title">
-      <h2>MY APPROACH</h2>
-    </div>
-    <div class="quote"
-        data-bottom="transform: translate3d(0, 100px, 0); opacity: 0.3;"
-        data-center="transform: translate3d(0, -44px, 0); opacity: 1;"
-        data-anchor=".approach">
-      <div class="part1">A DESIGNER IS A PLANNER</div>
-      <div class="part2">WITH AN</div>
-      <div class="part3">AESTHETIC SENSE</div>
-    </div>
-  </section>
-  <section class="steps content cf">
-    <div class="step-container cf">
-      <div class="step">
-        <div class="img-container">
-          <img
-            data-center="opacity: 1;"
-            data-bottom="opacity:0;"
-            class="colored" src="images/discovery_color.png" />
-          <img
-            data-center="opacity: 0;"
-            data-bottom="opacity:1;"
-            src="images/discovery.png" />
-        </div>
-        <h4>DISCOVERY</h4><h4>AND RESEARCH</h4>
-      </div>
-      <div class="step">
-        <div class="img-container">
-          <img
-            data-center="opacity: 1;"
-            data-bottom="opacity: 0;"
-            src="images/prototype_color.png" />
-          <img
-            data-center="opacity: 0;"
-            data-bottom="opacity:1;"
-            src="images/prototype.png" />
-        </div>
-        <h4>PROTOTYPE</h4><h4>AND TEST</h4>
-      </div>
-      <div class="step">
-        <div class="img-container">
-          <img
-            data-center="opacity: 1;"
-            data-bottom="opacity: 0;"
-            src="images/design_color.png" />
-          <img
-            data-center="opacity: 0;"
-            data-bottom="opacity:1;"
-            src="images/design.png" />
-        </div>
-        <h4>DESIGN FROM</h4><h4>THE HEART</h4>
-      </div>
-    </div>
-  </section>
 
-  <section class="projects">
-     <div class="title">
-      <h2>MY PROJECTS</h2>
-    </div>
-    <div class="bg"
-      data-center="background-position: 50% 0px;"
-      data-top-bottom="background-position: 50% -200px;"
-      data-anchor-target=".intro">
-    </div>
-  </section>
+    <section class="portfolio content">
+      <div class="projects-container cf">
+        <div class="project">
+          <a href="mejure">
+            <img src="images/patelco.jpg" />
+            <h4>PATELCO</h4>
+            <p>A credit union bank that wants to create a mobile banking app to compete with banks like Simple and Citi.</p>
+          </a>
+        </div>
+        <div class="project">
+          <a href="mejure">
+            <img src="images/mejuri.jpg" />
+            <h4>MEJURI</h4>
+            <p>Streamlining the checkout experience for fine jewellery shoppers.</p>
+          </a>
+        </div>
+        <div class="project">
+          <a href="">
+            <img src="images/sportomato.jpg" />
+            <h4>SPORTOMATO</h4>
+            <p>Refining a startup's mobile app from the ground up using Lean UX methods</p>
+          </a>
+        </div>
+      </div>
+      <a href="" class=" cta">MORE ON MY PORTFOLIO</a>
+    </section>
+  </div>
 
-  <section class="portfolio content">
-    <div class="projects-container cf">
-      <div class="project">
-        <a href="mejure">
-          <img src="images/patelco.jpg" />
-          <h4>PATELCO</h4>
-          <p>A credit union bank that wants to create a mobile banking app to compete with banks like Simple and Citi.</p>
-        </a>
-      </div>
-      <div class="project">
-        <a href="mejure">
-          <img src="images/mejuri.jpg" />
-          <h4>MEJURI</h4>
-          <p>Streamlining the checkout experience for fine jewellery shoppers.</p>
-        </a>
-      </div>
-      <div class="project">
-        <a href="">
-          <img src="images/sportomato.jpg" />
-          <h4>SPORTOMATO</h4>
-          <p>Refining a startup's mobile app from the ground up using Lean UX methods</p>
-        </a>
-      </div>
-    </div>
-    <a href="" class=" cta">MORE ON MY PORTFOLIO</a>
-  </section>
-  <section class="connect content">
+  <footer class="connect content">
     <h3>GET IN TOUCH</h3>
     <div class="container cf">
       <div class="sn">
@@ -147,9 +151,10 @@
         <img src="images/email.png" />
       </div>
     </div>
-  </section>
-    <script src="skrollr.js"></script>
-    <script src="jquery.js"></script>
+  </footer>
+
+    <script src="js/skrollr.js"></script>
+    <script src="js/jquery.js"></script>
     <!-- <script src="scrollspy.js"></script> -->
     <script>
       // $('.nav li').on('activate.bs.scrollspy', function() {
@@ -163,7 +168,7 @@
           $('.intro').height($(window).height());
         }).resize();
         var s = skrollr.init();
-      })
+      });
     </script>
   </body>
 </html>
