--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='css/font.css' rel='stylesheet' type='text/css'>
     <link href='css/style.css' rel='stylesheet' type='text/css'  charset="utf-8">
+    <title>Haya Odeh</title>
   </head>
   <body data-spy="scroll" data-target=".navbar">
     <div class="page-wrap">
