--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h1>HAYA ODEH</h1>
           <h3 class="role">UI UX DESIGNER</h3>
         </div>
-        <a href="" class="pdf cta">PDF PORTFOLIO</a>
+        <a href="https://docs.google.com/file/d/0BxcEAvhP3LnMVlBBVVZlRnY1d3c/edit" class="pdf cta">PDF PORTFOLIO</a>
       <div class="bg"
           data-center="background-position: 50% -100px;"
           data-top-bottom="background-position: 50% -200px;"
@@ -40,7 +40,7 @@
   <p>I’m a UI/UX Designer. Born in Abu Dhabi, raised in Jordan, I went to school to study Graphic Design &amp; Art. Through my school years I was deeply influenced by the impressionist movement in art. Thats when I started to pay attention to the crucial relation between design and the psyche, and that helped me in the way I approach my designs as a language or a way of communication.</p>
   <p>After graduating, I spent a few years working at small design studios in Amman. Meanwhile I paired with two programmers to do a side project, it was an open source and free app for helping people teach and learn programming online. And out of no where the project was a huge hit in the world of technology, which made me thrive for more and that passion found its new home in New York.</p>
   <p>In this new challenge I started to freelance in Graphic Design but I wanted more as I’ve always had this passion for technology. That's when I decided to take a deep dive into the world of tech and enroll in General Assembly UX Design Intensive course to study lean UX, change my career and emerge as a UI/UX designer.</p>
-  <a href="" class="resume cta">RESUME</a>
+  <a href="https://docs.google.com/file/d/0BxcEAvhP3LnMdHFlLW1zM3dnaUE/edit" class="resume cta">RESUME</a>
         </section>
       </section>
     <section class="approach" id="approach">
@@ -114,21 +114,21 @@
     <section class="portfolio content">
       <div class="projects-container cf">
         <div class="project">
-          <a href="mejure">
+          <a href="https://marvelapp.com/ihebc">
             <img src="images/patelco.jpg" />
             <h4>PATELCO</h4>
             <p>A credit union bank that wants to create a mobile banking app to compete with banks like Simple and Citi.</p>
           </a>
         </div>
         <div class="project">
-          <a href="mejure">
+          <a href="http://eceg84.axshare.com/#p=index">
             <img src="images/mejuri.jpg" />
             <h4>MEJURI</h4>
             <p>Streamlining the checkout experience for fine jewellery shoppers.</p>
           </a>
         </div>
         <div class="project">
-          <a href="">
+          <a href="https://marvelapp.com/263hd4">
             <img src="images/sportomato.jpg" />
             <h4>SPORTOMATO</h4>
             <p>Refining a startup's mobile app from the ground up using Lean UX methods</p>
@@ -143,13 +143,19 @@
     <h3>GET IN TOUCH</h3>
     <div class="container cf">
       <div class="sn">
-        <img src="images/linkedin.png" />
+        <a href="https://www.linkedin.com/pub/haya-odeh/28/259/b07">
+          <img src="images/linkedin.png" />
+        </a>
       </div>
       <div class="sn">
-        <img src="images/twitter.png" />
+        <a href="https://twitter.com/HayaOdeh">
+          <img src="images/twitter.png" />
+        </a>
       </div>
       <div class="sn">
-        <img src="images/email.png" />
+        <a href="mailto:hayaodeh2@gmail.com">
+          <img src="images/email.png" />
+        </a>
       </div>
     </div>
   </footer>
