--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           </a>
         </div>
       </div>
-      <a href="" class=" cta">MORE ON MY PORTFOLIO</a>
+      <a href="https://docs.google.com/file/d/0BxcEAvhP3LnMVlBBVVZlRnY1d3c/edit" class=" cta">MORE ON MY PORTFOLIO</a>
     </section>
   </div>
 
