I added a dot after methods

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <a href="https://marvelapp.com/263hd4">
             <img src="images/sportomato.jpg" />
             <h4>SPORTOMATO</h4>
-            <p>Refining a startup's mobile app from the ground up using Lean UX methods</p>
+            <p>Refining a startup's mobile app from the ground up using Lean UX methods.</p>
           </a>
         </div>
       </div>
