--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
      <meta charset="utf-8">
+    <link href="images/favicon.png" rel="shortcut icon" >
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='css/font.css' rel='stylesheet' type='text/css'>
     <link href='css/style.css' rel='stylesheet' type='text/css'  charset="utf-8">
