buffer for sketches animation

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
           } else {
             $quote.removeClass('active');
           }
-          if (scroll > $steps.offset().top - winHeight) {
+          if (scroll > $steps.offset().top - winHeight + 200) {
             $steps.addClass('active');
           } else {
             $steps.removeClass('active');
