--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>HAYA ODEH</h1>
         <h3 class="role">UI UX DESIGNER</h3>
       </div>
-      <a href="https://dl.dropboxusercontent.com/u/256982117/haya_final.pdf" class="pdf cta">PDF PORTFOLIO</a>
+      <a target="_blank" href="https://www.dropbox.com/s/4jzljvmt58xyz81/haya_final.pdf" class="pdf cta">PDF PORTFOLIO</a>
       <div class="parallax-intro" data-image="images/intro.jpg"></div>
       <div class="scroll-arrow"></div>
     </div>
@@ -112,7 +112,7 @@
         </a>
       </div>
     </div>
-    <a href="https://dl.dropboxusercontent.com/u/256982117/haya_final.pdf" class=" cta">MORE ON MY PORTFOLIO</a>
+    <a target="_blank" href="https://www.dropbox.com/s/4jzljvmt58xyz81/haya_final.pdf" class=" cta">MORE ON MY PORTFOLIO</a>
   </section>
 
   <footer class="connect content">
