Updating the Resume to the new design

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <p>I’m a UI/UX Designer. Born in Abu Dhabi, raised in Jordan, I went to school to study Graphic Design &amp; Art. Through my school years I was deeply influenced by the impressionist movement in art. Thats when I started to pay attention to the crucial relation between design and the psyche, and that helped me in the way I approach my designs as a language or a way of communication.</p>
 <p>After graduating, I spent a few years working at small design studios in Amman. Meanwhile I paired with two programmers to do a side project, it was an open source and free app for helping people teach and learn programming online. And out of no where the project was a huge hit in the world of technology, which made me thrive for more and that passion found its new home in New York.</p>
 <p>In this new challenge I started to freelance in Graphic Design but I wanted more as I’ve always had this passion for technology. That's when I decided to take a deep dive into the world of tech and enroll in General Assembly UX Design Intensive course to study lean UX, change my career and emerge as a UI/UX designer.</p>
-<a href="https://dl.dropboxusercontent.com/u/256982117/Resume.pdf" class="resume cta">RESUME</a>
+<a href="https://dl.dropboxusercontent.com/u/256982117/Haya%20Odeh%20Resume.pdf" class="resume cta">RESUME</a>
       </section>
     </section>
   <section class="approach" id="approach">
